# Speech-Backbones

./: .gitignore  README.md
Grad-TTS/: .gitignore  README.md  config.json  data.py  finetune.sh  inference.ipynb  inference.py  inference_RO.py  inference_RO.sh  params.py  pyproject.toml  requirements.txt  train.py  train_multi_speaker.py
Grad-TTS/examples/: synthesize.py
Grad-TTS/gradtts_ro/: __init__.py  pipeline.py
Grad-TTS/gradtts_ro/model/: diffusion.py  text_encoder.py  tts.py
Grad-TTS/gradtts_ro/model/monotonic_align/: __init__.py
Grad-TTS/gradtts_ro/text_processing/: __init__.py  cleaners.py  symbols.py
Grad-TTS/gradtts_ro/vocoder/: __init__.py  xutils.py
Grad-TTS/model/: tts.py
Grad-TTS/resources/filelists/SWARA_1_0/: finetune_meta_bas_1490_samples.csv  finetune_meta_sgs_994_samples.csv  train_meta_v1_train.txt  train_meta_v1_val.txt
Grad-TTS/tools/text_processing/: __init__.py  cleaners.py  symbols.py
