[project]
name = "gradtts-ro"
version = "0.1.0"
description = "Romanian Grad-TTS: Diffusion-based Text-to-Speech"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "torch>=1.9.0",
    "torchaudio>=0.9.0",
    "numpy>=1.19.5",
    "scipy>=1.5.4",
    "phonemizer>=3.2.1",
    "huggingface-hub>=0.14.0",
    "Unidecode>=1.1.2",
    "einops>=0.3.0",
    "Cython>=0.29.23",
]

[project.optional-dependencies]
train = [
    "matplotlib>=3.3.3",
    "tensorboard>=2.10.1",
    "tqdm",
    "librosa>=0.8.0",
    "inflect>=5.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gradtts_ro"]
